# jina-rerank

./: .gitignore  Dockerfile  LICENCE  README.md  main.py  pyproject.toml
.github/workflows/: build-ghcr.yaml  build.yaml  docker-hub.yaml
.run/: API.run.xml
app/: __init__.py  config.py  logging.py  main.py  model.py  types.py
